        dependency penalty.
    - config:
      - 'getNumber': renamed to 'getInteger'.
    - cache/version:
      - 'AvailableAsEntry': renamed to 'Source'.
      - 'availableAs': renamed to 'sources'.
    - download/progress:
      - 'progress': fixed nasty bug with wrong computing total download
        size when at least one download has an unknown size.
    - Link with 'rt'.
  * doc:
    - examples:
      - Added 'show-upgradeable' example.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 26 Sep 2010 13:20:47 +0300

cupt2 (2.0.0~alpha1) UNRELEASED; urgency=low

  * Re-implemented in C++ (and subset of C++0x).

  * console:
    - The '--installed-only' option now works under 'shell' command.
    - The 'config-dump' subcommand no longer accepts arguments.
  * lib:
    - cache/sourceversion:
      - Support multiple tarballs.
    - config:
      - Implemented issuing detailed error messages when facing syntax errors
        in configuration files.
    - cache:
      - Implemented refusing expired Release files.
  * downloadmethods:
    - wget:
      - Implemented.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 26 Sep 2010 12:31:09 +0300

cupt (1.5.14) unstable; urgency=low

  * doc:
    - cupt_vs_apt:
      - Documented not handling the difference between 'specific' and
        'general' APT pin types. (Closes: #586347)
  * Cupt:
    - Cache:
      - ArchitecturedRelation:
        - Implemented architecture wildcards support. (Closes: #587354)
  * debian/control:
    - Bumped Standards-Version to 3.9.0, no changes needed.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 08 Jul 2010 21:20:35 +0300

cupt (1.5.13) unstable; urgency=low

  * Cupt:
    - Cache:
      - Reading APT preferences: handle multiple package names, separated by
        spaces, correctly. Thanks to Julian Andres Klode for the report.
        (Closes: #585017)
    - System:
      - Worker:
        - Fixed passing version comparison result for pre-install hooks of