@@ -23,6 +23,9 @@ cupt2 (2.0.0~alpha2~) UNRELEASED; urgency=low
       - 'progress': fixed nasty bug with wrong computing total download
         size when at least one download has an unknown size.
     - Link with 'rt'.
+    - cache/relation:
+      - 'unarchitectureRelationLine': moved to ArchitecturedRelationLine class
+        and renamed to 'toRelationLine'.
   * doc:
     - examples:
       - Added 'show-upgradeable' example.
